# Projet-SIM

./: .gitignore  .travis.yml  Formule de physique.md  Idées pour le projet SIM (Non finale).md  NormeBoiteCollision.md  NormePuzzle.md  NormesDeProg.md  README.md  RemarquesKev.md
The_Journalist/The_Journalist/sources/: CMakeLists.txt  Clef.h  Couteau.h  LampeDePoche.h  Munitions.h
The_Journalist/The_Journalist/sources/Classes projet/: Aimant.h  Balance.h  BarreProgressive.h  BoiteCollision.h  Bouton.h  Camera.h  CanonAPeinture.h  Carte.h  Case.h  Cible.h  Clavier.h  Cle.h  Consommable.h  ControlleurAudio.h  Curseur.h  Droite.h  Equipable.h  Examen.h  Fenetre.h  Fusil.h  Gestionnaire2D.h  Gestionnaire3D.h  GestionnaireChemin.h  GestionnairePhases.h  (+70 more)
sources/: Aimant.h  Balance.h  BoiteCollision.h  CMakeLists.txt  Camera.h  CameraGodMode.h  Carte.h  Choix.h  Chrono.h  Clavier.h  Clef.h  Connecteur.h  Consommable.h  Contenu.h  Couteau.h  Droite.h  ElementCT.h  Fabrique.h  Fenetre.h  Fusil.h  Game.h  Gestionnaire2D.h  Gestionnaire3D.h  GestionnaireChemin.h  GestionnaireEvenements.h  GestionnaireLiens.h  GestionnairePhases.h  GestionnaireRessources.h  Graphe.h  Info.h  Jeu.h  Joueur.h  Lecteur.h  LecteurFichier.h  Makefile.CLion  Makefile.MacOS  Maths.h  Matrices.h  ModeVideo.h  Model.h  (+37 more)
sources/Classes Moteur Graphique/: Clavier.h  Gestionnaire2D.h  Gestionnaire3D.h  GestionnaireEvenements.h  GestionnaireRessources.h  Modele.h  Modele3D.h  Objet2D.h  Objet3D.h  Souris.h  Sprite2D.h  Texte2D.h  Texture.h
sources/Classes moteur physique/: Chrono.h  CollisionObjetSalle.h  Droite.h  Joueur.h  Objet3D.h  Physique.h  Plan.h  main.cpp
sources/Classes projet/: Aimant.h  BoiteCollision.h  Bouton.h  Camera.h  CameraGodMode.h  CanonAPeinture.h  Carte.h  Case.h  Chrono.h  Cible.h  Clavier.h  Cle.h  Commutateur.h  Connecteur.h  Consommable.h  ControleVisuel.h  ControlleurAudio.h  Curseur.h  Equipable.h  Examen.h  Fenetre.h  Fusil.h  Gestionnaire2D.h  Gestionnaire3D.h  GestionnaireControle.h  GestionnaireEvenements.h  GestionnairePhases.h  GestionnaireRessources.h  GestionnaireSucces.h  Glisseur.h  Graphe.h  Illuminati.h  Info.h  Inventaire.h  Item.h  Jetable.h  Jeu.h  Joueur.h  Journal.h  Lecteur.h  (+65 more)
sources/Interface/: Bouton.h  ControleVisuel.h  Etiquette.h  GestionnaireControle.h  GestionnaireMenu.h  Glisseur.h  Menu.h  MenuControle.h  MenuGraphique.h  MenuNouvellePartie.h  MenuOptions.h  MenuPause.h  MenuPrincipal.h  MenuSon.h  Phase.h  PhaseJeu.h  PhaseMenuGraphique.h  PhaseMenuNouvellePartie.h  PhaseMenuOptions.h  PhaseMenuPause.h  PhaseMenuPrincipal.h  PhaseMenuSon.h  Rect.h
sources/ObjetsFixes/: Banniere.h
sources/SalleSim2k15/: Salle.h  main.cpp
sources/TEMP Interfaces/: Analyse des besoins de l.docx  DiagrammesClasses.vsd
(+327 files in other folders)
