cmake_minimum_required(VERSION 3.1)

project(Musique)

if(APPLE)
set(SDL2_INCLUDE_DIR /Library/Frameworks/SDL2.framework/Headers/SDL.h)
set(SDL2_IMAGE_DIR /Library/Frameworks/SDL2_image.framework/Headers/SDL_image.h)
set(SDL2_TTF_DIR /Library/Frameworks/SDL2_ttf.framework/Headers/SDL_ttf.h)
set(SDL2_MIXER_DIR /Library/Frameworks/SDL2_mixer.framework/Headers/SDL_mixer.h)
set(GL_INCLUDE_DIR /System/Library/Frameworks/OpenGL.framework/Headers/OpenGL.h)
set(SDL2_LIBRARY /usr/local/lib/libSDL2.dylib)
set(GL_LIBRARY /System/Library/Frameworks/OpenGL.framework/Libraries/libGL.dylib)
set(SDL2_IMAGE_LIBRARY /usr/local/lib/libSDL2_image.dylib)
set(SDL2_TTF_LIBRARY /usr/local/lib/libSDL2_ttf.dylib)
set(SDL2_MIXER_LIBRARY /usr/local/lib/libSDL2_mixer.dylib)
else(APPLE)
set(SDL2_INCLUDE_DIR /usr/local/include/SDL2/SDL.h)
set(SDL2_IMAGE_DIR /usr/local/include/SDL2/SDL_image.h)
set(GL_INCLUDE_DIR /usr/include/GL/gl.h)
set(SDL2_LIBRARY /usr/local/lib/libSDL2.so)
set(SDL2_IMAGE_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_image.so)
set(GL_LIBRARY /usr/lib/x86_64-linux-gnu/libGL.so)
endif(APPLE)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(${SDL2_INCLUDE_DIR})
include_directories(${GL_INCLUDE_DIR})
include_directories(${SDL2_IMAGE_DIR})
include_directories(${SDL2_TTF_DIR})
include_directories(${SDL2_MIXER_DIR})

set(SOURCE_FILES main.cpp)
add_executable(Musique ${SOURCE_FILES})
target_link_libraries(Musique ${SDL2_LIBRARY})
target_link_libraries(Musique ${SDL2_IMAGE_LIBRARY})
target_link_libraries(Musique ${SDL2_TTF_LIBRARY})
target_link_libraries(Musique ${SDL2_MIXER_LIBRARY})
target_link_libraries(Musique ${GL_LIBRARY})
